--- a/si /si.html
+++ b/si /si.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Calculadora </title>
+  <title>Calculadora Moderna</title>
   <style>
     body {
       margin: 0;
@@ -60,97 +60,61 @@
       background-color: #686868;
     }
 
-    /* Colores especiales */
-    .operador {
-      background-color: #c56ce9;
-    }
-
-    .borrar {
+    button:nth-child(1), /* C */
+    button:nth-child(2), /* ⌫ */
+    button:nth-child(3)  /* % */ {
       background-color: #e624a2;
     }
 
-    .igual {
+    button:nth-child(4), /* / */
+    button:nth-child(8), /* * */
+    button:nth-child(12), /* - */
+    button:nth-child(16), /* + */
+    button:nth-child(19)  /* = */ {
       background-color: #c56ce9;
+      color: #fff;
+    }
+
+    button:nth-child(19) {
+      grid-column: span 1;
+    }
+
+    button:nth-child(17) {
+      grid-column: span 2;
     }
   </style>
 </head>
-<body>
 
+<body>
   <div class="Calculadora">
-    <div class="Pantalla" id="pantalla">0</div>
+    <div class="Pantalla" id="Pantalla">0</div>
     <div class="teclas">
-      <button class="borrar" onclick="borrar_todo()">C</button>
-      <button class="borrar" onclick="retroceder()">⌫</button>
-      <button class="operador" onclick="operacion('*')">*</button>
-      <button class="operador" onclick="operacion('/')">/</button>
+      <button onclick="borrar_todo()">C</button>
+      <button onclick="retroceder()">⌫</button>
+      <button onclick="operacion('%')">%</button>
+      <button onclick="operacion('/')"> / </button>
 
       <button onclick="agregar('7')">7</button>
       <button onclick="agregar('8')">8</button>
       <button onclick="agregar('9')">9</button>
-      <button class="operador" onclick="operacion('+')">+</button>
+      <button onclick="operacion('*')">*</button>
 
       <button onclick="agregar('4')">4</button>
       <button onclick="agregar('5')">5</button>
       <button onclick="agregar('6')">6</button>
-      <button class="operador" onclick="operacion('-')">-</button>
+      <button onclick="operacion('-')">-</button>
 
       <button onclick="agregar('1')">1</button>
       <button onclick="agregar('2')">2</button>
       <button onclick="agregar('3')">3</button>
-      <button class="igual" onclick="calcular()">=</button>
+      <button onclick="operacion('+')">+</button>
 
       <button onclick="agregar('0')">0</button>
       <button onclick="agregar('.')">.</button>
+      <button onclick="calcular()">=</button>
     </div>
   </div>
-
-  <script>
-    let expresion = "";
-
-    function actualizarPantalla() {
-      const pantalla = document.getElementById("pantalla");
-      pantalla.textContent = expresion === "" ? "0" : expresion;
-    }
-
-    function agregar(valor) {
-      expresion += valor;
-      actualizarPantalla();
-    }
-
-    function borrar_todo() {
-      expresion = "";
-      actualizarPantalla();
-    }
-
-    function retroceder() {
-      expresion = expresion.slice(0, -1);
-      actualizarPantalla();
-    }
-
-    function operacion(op) {
-      if (expresion !== "" && !"+-*/".includes(expresion.slice(-1))) {
-        expresion += op;
-        actualizarPantalla();
-      }
-    }
-
-    function calcular() {
-      try {
-        const resultado = eval(expresion);
-        expresion = String(resultado);
-        actualizarPantalla();
-      } catch {
-        expresion = "Sintax Error";
-        actualizarPantalla();
-        setTimeout(() => {
-          expresion = "";
-          actualizarPantalla();
-        }, 1500);
-      }
-    }
-
-    actualizarPantalla();
-  </script>
+<script src="si.js" defer></script>
 
 </body>
 </html>
