--- a/si /si.html
+++ b/si /si.html
@@ -2,119 +2,135 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Calculadora Moderna</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Calculadora Simple</title>
   <style>
     body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #1e1e1e;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
-
-    .Calculadora {
-      background-color: #2d2d2d;
-      border-radius: 20px;
-      padding: 20px;
-      box-shadow: 0px 10px 20px rgba(0,0,0,0.5);
-      width: 320px;
-    }
-
-    .Pantalla {
-      background-color: #1a1a1a;
-      color: #fff;
-      font-size: 2.5rem;
-      text-align: right;
+      font-family: Arial, sans-serif;
+      max-width: 320px;
+      margin: 70px auto;
+      background: #4c4848;
       padding: 20px;
       border-radius: 10px;
-      margin-bottom: 20px;
+      box-shadow: 0 0 10px #ccc;
+    }
+    #pantalla {
+      width: 100%;
+      height: 48px;
+      background: #222;
+      color: rgb(255, 255, 255);
+      font-size: 24px;
+      text-align: right;
+      padding: 10px;
+      border-radius: 10px;
+      margin-bottom: 10px;
+      user-select: none;
       overflow-x: auto;
     }
-
-    .teclas {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 12px;
-    }
-
-    button {
-      padding: 20px;
-      font-size: 1.2rem;
+    .boton {
+      width: 23%;
+      height: 50px;
+      margin: 1%;
+      font-size: 20px;
       border: none;
-      border-radius: 10px;
-      background-color: #3a3a3a;
-      color: white;
+      border-radius: 5px;
       cursor: pointer;
-      transition: background-color 0.2s ease;
     }
-
-    button:hover {
-      background-color: #505050;
+    .boton-operador {
+      background-color: #aa1892;
+      color: rgb(235, 220, 220);
     }
-
-    button:active {
-      background-color: #686868;
+    .boton-numero {
+      background-color: #685e5e;
+      color: rgb(231, 224, 224);
     }
-
-    button:nth-child(1), /* C */
-    button:nth-child(2), /* ⌫ */
-    button:nth-child(3)  /* % */ {
-      background-color: #e624a2;
+    .boton-borrar {
+      background-color: #9021ac;
+      color: rgb(231, 224, 224);
     }
-
-    button:nth-child(4), /* / */
-    button:nth-child(8), /* * */
-    button:nth-child(12), /* - */
-    button:nth-child(16), /* + */
-    button:nth-child(19)  /* = */ {
-      background-color: #c56ce9;
-      color: #fff;
+    .boton-igual {
+      background-color: #952d99;
+      color: rgb(231, 199, 199);
+      width: 48%;
     }
-
-    button:nth-child(19) {
-      grid-column: span 1;
-    }
-
-    button:nth-child(17) {
-      grid-column: span 2;
+    .fila {
+      display:flex;
+      justify-content: space-between;
     }
   </style>
 </head>
-
 <body>
-  <div class="Calculadora">
-    <div class="Pantalla" id="Pantalla">0</div>
-    <div class="teclas">
-      <button onclick="borrar_todo()">C</button>
-      <button onclick="retroceder()">⌫</button>
-      <button onclick="operacion('%')">%</button>
-      <button onclick="operacion('/')"> / </button>
 
-      <button onclick="agregar('7')">7</button>
-      <button onclick="agregar('8')">8</button>
-      <button onclick="agregar('9')">9</button>
-      <button onclick="operacion('*')">*</button>
+  <div id="pantalla">0</div>
 
-      <button onclick="agregar('4')">4</button>
-      <button onclick="agregar('5')">5</button>
-      <button onclick="agregar('6')">6</button>
-      <button onclick="operacion('-')">-</button>
-
-      <button onclick="agregar('1')">1</button>
-      <button onclick="agregar('2')">2</button>
-      <button onclick="agregar('3')">3</button>
-      <button onclick="operacion('+')">+</button>
-
-      <button onclick="agregar('0')">0</button>
-      <button onclick="agregar('.')">.</button>
-      <button onclick="calcular()">=</button>
-    </div>
+  <div class="fila">
+    <button class="boton boton-borrar" onclick="limpiar()">C</button>
+    <button class="boton boton-borrar" onclick="retroceder()">⌫</button>
+    <button class="boton boton-operador" onclick="agregar('%')">%</button>
+    <button class="boton boton-operador" onclick="agregar('/')">÷</button>
   </div>
-<script src="si.js" defer></script>
 
+  <div class="fila">
+    <button class="boton boton-numero" onclick="agregar('7')">7</button>
+    <button class="boton boton-numero" onclick="agregar('8')">8</button>
+    <button class="boton boton-numero" onclick="agregar('9')">9</button>
+    <button class="boton boton-operador" onclick="agregar('*')">×</button>
+  </div>
+
+  <div class="fila">
+    <button class="boton boton-numero" onclick="agregar('4')">4</button>
+    <button class="boton boton-numero" onclick="agregar('5')">5</button>
+    <button class="boton boton-numero" onclick="agregar('6')">6</button>
+    <button class="boton boton-operador" onclick="agregar('-')">−</button>
+  </div>
+
+  <div class="fila">
+    <button class="boton boton-numero" onclick="agregar('1')">1</button>
+    <button class="boton boton-numero" onclick="agregar('2')">2</button>
+    <button class="boton boton-numero" onclick="agregar('3')">3</button>
+    <button class="boton boton-operador" onclick="agregar('+')">+</button>
+  </div>
+
+  <div class="fila">
+    <button class="boton boton-numero" style="width: 48%;" onclick="agregar('0')">0</button>
+    <button class="boton boton-numero" onclick="agregar('.')">.</button>
+    <button class="boton boton-igual" onclick="calcular()">=</button>
+  </div>
+
+  <script>
+    const pantalla = document.getElementById('pantalla');
+    let operacion = '';
+
+    function agregar(valor) {
+      if (pantalla.textContent === '0' || pantalla.textContent === 'Error' || pantalla.textContent === 'Sintax Error') {
+        operacion = valor;
+      } else {
+        operacion += valor;
+      }
+      pantalla.textContent = operacion;
+    }
+
+    function limpiar() {
+      operacion = '';
+      pantalla.textContent = '0';
+    }
+
+    function retroceder() {
+      operacion = operacion.slice(0, -1);
+      pantalla.textContent = operacion || '0';
+    }
+
+    function calcular() {
+      try {
+        // Reemplaza todos los % por /100
+        let resultado = eval(operacion.replace(/%/g, '/100'));
+        pantalla.textContent = resultado;
+        operacion = resultado.toString();
+      } catch {
+        pantalla.textContent = 'Sintax Error';
+        operacion = '';
+      }
+    }
+  </script>
 </body>
 </html>
